Fixes some layout problems on the subfilters.

--- a/themes/openy_themes/openy_carnation/src/scss/component/_breadcrumbs.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/component/_breadcrumbs.scss
@@ -24,7 +24,7 @@ $breadcrumbColorsLength: length($breadcrumbColors);
       @include cachet();
       display: block;
       float: left;
-      height: 50px;
+      min-height: 50px;
       text-align: center;
       padding: 10px 20px 10px 50px;
       position: relative;
